<resources>
    <string name="app_name">Lipa</string>
    <string name="generate_qr_code">Generate Qr Code</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Register_Now">Welcome to LIPA, your Cashless mode of Payment. Please Register Below and Enjoy the
        Experience of paying Cashless. Joining this site you agree to the following terms. Do no harm!
    </string>
    <string name="Terms_and_Conditions">Clicking The Sign Up Button means that you agree to These terms and conditions
        that govern the legal relationship between LIPA and its Users and incorporate the provisions of the LIPA Privacy
        Policy. Please read these terms and conditions carefully. You must be 13 or older to register. Companies that
        participate in this app must be offering or may issue a child under 13 Parental Guidance, but only after
        obtaining express parental consent.
    </string>
    <string name="SignIn_Now">Log in to be Able to Have Access into the App and be able to use it. Thank You</string>
    <string name="Reset_Password_Message">We Just need your registered Email ID to, so we can send to your email the password
    reset instructions</string>
    <string name="Reset_Button_Message">Reset Password</string>
    <string name="scan_qr_code">Scan Qr Code</string>
    <string name="barcode_reader">QrCode Reader</string>
    <string name="app_needs_your_camera_permission_in_order_to_scan_qr_code">App needs your camera permission in order
        to scan qr code.
    </string>
    <string name="scanned_qr_code_result">Scanned Qr Code</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="Item_Name">Item Name :</string>
    <string name="Item_Price">Price :</string>
    <string name="Full_Name">Full Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Country">Country</string>
    <string name="title_activity_first">first</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Forgot_your_Password">Forgot your password</string>
    <string name="Login">Sign in</string>
</resources>
