<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                tools:context=".AccountActivity.Register">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/RegisterTextViewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:theme="@style/TextLabel">

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/RegisterTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/Register_Now"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textColor="@color/whiteColor"
                android:textSize="15sp" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/fullNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RegisterTextViewLayout"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:theme="@style/TextLabel">

        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/FullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/Full_Name"
                android:inputType="textCapSentences"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textColor="@color/whiteColor"
                android:textSize="15sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/EmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fullNameLayout"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:theme="@style/TextLabel">

        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textColor="@color/whiteColor"
                android:textSize="15sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/PasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/EmailLayout"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:theme="@style/TextLabel">

        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textColor="@color/whiteColor"
                android:textSize="15sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/ConfirmPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PasswordLayout"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:theme="@style/TextLabel">

        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/ConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/Confirm_Password"
                android:inputType="textPassword"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textColor="@color/whiteColor"
                android:textSize="15sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/PhoneNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ConfirmPasswordLayout"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:theme="@style/TextLabel">

        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/PhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/Phone_Number"
                android:inputType="phone"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textColor="@color/whiteColor"
                android:textSize="15sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/TermsandConditionsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PhoneNumberLayout"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:theme="@style/TextLabel">

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/TermsandConditionsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/Terms_and_Conditions"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textColor="@color/whiteColor"
                android:textSize="15sp" />

    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/SignUp"
            style="?android:buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/square_primary_button_drawable"
            android:text="@string/Sign_Up"
            android:textColor="@color/whiteColor"
            android:textStyle="bold" />

</RelativeLayout>