<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                tools:context=".AccountActivity.Register">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/SignINTextViewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:theme="@style/TextLabel">

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/LoginTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/SignIn_Now"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textColor="@color/whiteColor"
                android:textSize="15sp" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/EmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SignINTextViewLayout"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="200dp"
            android:theme="@style/TextLabel">

        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textColor="@color/whiteColor"
                android:textSize="15sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/PasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/EmailLayout"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:theme="@style/TextLabel">

        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textColor="@color/whiteColor"
                android:textSize="15sp" />

    </android.support.design.widget.TextInputLayout>


    <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorAccent"
            android:text="@string/Sign_Up"
            style="?android:buttonBarButtonStyle"
            android:textColor="@color/whiteColor"
            android:textStyle="bold"
            android:layout_below="@+id/PasswordLayout"/>

    <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/Forgot_your_Password"
            android:layout_below="@id/btn_login"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

    <ProgressBar
            android:id="@+id/login_progressbarsignin"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center|bottom"
            android:visibility="gone"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="162dp" />

</RelativeLayout>