<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                tools:context=".Register">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/ResetPasswordTextViewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:theme="@style/TextLabel">

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/ResetPasswordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/Reset_Password_Message"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textColor="@color/whiteColor"
                android:textSize="15sp" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/EmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SignINTextViewLayout"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="200dp"
            android:theme="@style/TextLabel">

        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textColor="@color/whiteColor"
                android:textSize="15sp" />

    </android.support.design.widget.TextInputLayout>


    <Button
            android:id="@+id/btn_Reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorAccent"
            android:text="@string/Reset_Button_Message"
            style="?android:buttonBarButtonStyle"
            android:textColor="@color/whiteColor"
            android:textStyle="bold"
            android:layout_below="@+id/EmailLayout"/>

    <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorAccent"
            android:text="@string/btn_back"
            style="?android:buttonBarButtonStyle"
            android:textColor="@color/whiteColor"
            android:layout_below="@+id/btn_Reset"/>

    <ProgressBar
            android:id="@+id/progressBarresetemail"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            tools:ignore="MissingConstraints" />

</RelativeLayout>