<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary"
              android:orientation="vertical"
              tools:context=".QRScanningActivity.ScannedActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/scanned_qr_code_result"
            android:textColor="@color/littleWhite"
            android:textSize="14sp"
            android:textStyle="bold" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Item_Name"
                android:textColor="@color/colorDivider"
                android:textSize="15sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/scannedItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/whiteColor"
                android:textSize="15sp"
                android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Item_Price"
                android:textColor="@color/colorDivider"
                android:textSize="15sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/scannedItemPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/whiteColor"
                android:textSize="15sp"
                android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>